--- a/class1/MobileFirst_practis/MF.html
+++ b/class1/MobileFirst_practis/MF.html
@@ -11,12 +11,9 @@
     rel="stylesheet" />
     <style> @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
-    <link rel="stylesheet" href="style.css" />
-    <script
-       src="https://kit.fontawesome.com/2d323a629b.js"
-       crossorigin="anonymous"
-    ></script>
-    <script src="/main.js" defer></script>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="https://kit.fontawesome.com/2d323a629b.js" crossorigin="anonymous"></script>
+    <script src="./main.js" defer></script>
 </head>
 <body>
 
@@ -36,7 +33,7 @@
 
 <!-- Video Player -->
  <section class="player">
-    <video controls src="/1차 편집본.mp4"></video>
+    <video controls src="./영상편집 이제 섬세히 배우자! 광고영상.mp4"></video>
  </section>
  
  <div class="infoAndUp">
@@ -81,7 +78,7 @@
    <!-- Channel Name -->
    <div class="channel">
     <div class="metadata">
-       <img src="/pro2.jpg" alt=""/>
+       <img src="./pro2.jpg" alt=""/>
        <div class="info">
            <span class="name">드림코딩 by 엘리</span>
            <span class="subscribers">1M subscribers</span>
@@ -98,7 +95,7 @@
    <span class="title">Up next</span>
    <ul>
        <li class="item">
-           <div class="img"><img src="/p1.jpg" alt=""/></div>
+           <div class="img"><img src="./p1.jpg" alt=""/></div>
            <div class="info">
                <span class="title">프론트엔드 강의, 프론트엔드 개발자가 되고 싶다면? 웹개발
                    입문자편 강의를 시작합니다
@@ -109,7 +106,7 @@
            <button class="moreButton"><i class="fas fa-ellipsis-v"></i></button>
        </li>
        <li class="item">
-           <div class="img"><img src="/p2.jpg" alt="" /></div>
+           <div class="img"><img src="./p2.jpg" alt="" /></div>
            <div class="info">
                <span class="title">HTML 기초, React 할때 꼭 필요한 팁! 쉽다고 무시하면 안돼요 ㅣ 프론트엔드 개발자 입문편: HTML, CSS, Javascript
                </span>
@@ -119,7 +116,7 @@
            <button class="moreButton"><i class="fas fa-ellipsis-v"></i></button>
        </li>
        <li class="item">
-           <div class="img"><img src="/p3.jpg" alt="" /></div>
+           <div class="img"><img src="./p3.jpg" alt="" /></div>
            <div class="info">
                <span class="title">HTML 태그 완성, 웹 포트폴리오 만들기 전에 꼭 보세요 ㅣ 프론트엔드 개발자 입문편:ㅋㅋㅋ
                </span>
